Writing through "Five Things" myself.

--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -37,25 +37,21 @@
 
 *The week's top headlines emerging technologies and trends re-shaping the web:*
 
-- **New AI product launches by Big Tech:** The Decrypt article titled "Amazon Begins Rolling Out Enhanced AI-Powered Alexa+ Assistant" details the rollout of Amazon's upgraded AI-powered assistant, noting incompatibility with some first-generation devices and delays in certain features. Alexa+ is *free for Amazon Prime members*, costs $19.99 monthly for others, includes privacy safety features, but currently does not allow users to delete uploaded documents. | The Decrypt article titled "Here’s a Closer Look at Meta’s New Standalone AI App" reviews *Meta's new standalone Meta AI assistant app*, powered by the Llama 4 model, which is available on iOS, Android, and desktop platforms. Key features noted include high-definition image/video generation, customizable AI voices, integration with Meta's smart glasses, and a Discovery tab to view and share AI-generated content, though it notes images are shared by default unless settings are changed.
+- **Apple took its turn in America's antitrust crosshairs.** A federal judge in Oakland ruled that Apple [violated an earlier court order](https://www.reuters.com/sustainability/boards-policy-regulation/us-judge-rules-apple-violated-order-reform-app-store-2025-04-30/) to reform its App Store to allow greater competition in download options and payment methods on mobile devices. She referred the case to federal prosecutors, who may now pursue criminal charges in the matter. Apple said it plans to appeal the decision. But in the meantime, it immediately relaxed some payment rules in its U.S. App Store. The changes could prove particularly [helpful to web3 apps](https://www.theblock.co/post/353047/u-s-app-store-to-allow-apps-to-skirt-30-fee-on-nft-crypto-sales-following-apples-legal-defeat), which have sometimes struggled to offer cost-effective trading in non-fungible tokens and digital currencies on Apple devices.
 
-- **Antitrust updates:** | A US judge has ruled that Apple violated an order to reform the App Store, which could have significant implications for the company's business model. For more information, check out the full article here. ([Reuters](https://www.reuters.com/sustainability/boards-policy-regulation/us-judge-rules-apple-violated-order-reform-app-store-2025-04-30/)) | Apple has revised its App Store guidelines to allow developers to include links to external payment methods, potentially paving the way for a new wave of crypto and NFT-related apps on the U.S. App Store. This change comes after a court ruling in favor of Epic Games, which had sued Apple over its commission fees on in-app purchases. ([The Block](https://www.theblock.co/post/353047/u-s-app-store-to-allow-apps-to-skirt-30-fee-on-nft-crypto-sales-following-apples-legal-defeat)) | In a significant blow to Apple's business model, a federal judge ruled that the company violated an antitrust order by restricting developers from linking to alternative payment systems in their apps. The decision, which could potentially upend Apple's lucrative App Store commission, comes after a long-standing dispute between Apple and developers such as Epic Games and Spotify, who have accused the tech giant of using its power to stifle competition. ([Wall Street Journal](https://www.wsj.com/tech/apple-app-store-lawsuit-tim-cook-legacy-869c2acf?st=m4vmwY&reflink=desktopwebshare_permalink))
+- **New AI product launches by Big Tech:** Amazon began [rolling out Alexa+](https://decrypt.co/317605/amazon-rolling-out-enhanced-alexa), its new AI-powered assistant, to more than 100,000 early users in a limited preview, months after the company originally scheduled the release for last October. Meanwhile, Meta [launched a standalone app](https://decrypt.co/316997/metas-latest-standalone-ai-app) for its Meta AI assistant. The new offering seeks to expand Meta's reach in the AI sector beyond users of its Facebook, Instagram, and WhatsApp platforms.
 
-- **Washington Watch:** The excerpts from the MSNBC article titled "$TRUMP meme coin dinner brings crypto grift to the White House" list featured MSNBC shows and TV options but do not provide content from the article itself. Therefore, the main topic of the article cannot be summarized from these sources. | The POLITICO article titled "A tech law just passed. Could it happen again?" reports that Congress recently passed the **Take It Down Act**, which creates a federal mandate for tech platforms to **remove nonconsensual AI-generated porn**. The article suggests that passing tech legislation is rare in the current political climate and the success of the Take It Down Act was likely a "one-off" requiring a "perfect storm of circumstances". | The Electronic Frontier Foundation (EFF) article titled "Congress Passes TAKE IT DOWN Act Despite Major Flaws" critiques the recently passed Take It Down Act, arguing its takedown provision is too broad and lacks safeguards, likely leading to the removal of legal content due to reliance on automated filters and tight timeframes. EFF contends that this bill is the "wrong approach" to assisting victims of nonconsensual image sharing and introduces a new regime of online censorship. - The excerpt from the POLITICO article titled "GOP reverses move to consolidate antitrust at DOJ" only includes header information and related links but does not contain any details about the content regarding the GOP's decision on antitrust consolidation at the DOJ. Therefore, the main topic of the article cannot be summarized from this source. | The CoinDesk article titled World Liberty’s USD1 Will Integrate With Tron; WLFI's Witkoff Teases More Partnerships reports that *World Liberty Financial's stablecoin, USD1*, has been chosen for MGX's $2 billion investment in Binance and is set to *integrate with the Tron ecosystem*. World Liberty co-founder Zach Witkoff mentioned plans for further DeFi integrations and aiming to establish USD1 as a preferred stablecoin in both DeFi and CeFi ecosystems. | The CoinTelegraph article titled "Pro-crypto Democrats pull support for stablecoin bill in last minute" reports that a group of *nine US Senate Democrats*, previously supportive of the crypto industry, have announced they will *oppose a Republican-led stablecoin bill** in its current form. They stated the bill requires "numerous issues that must be addressed" and their opposition threatens its chance of passing. | The CoinTelegraph article titled "Pro-crypto senator pushes back on Trump's memecoin dinner — Report" states that *Senator Cynthia Lummis* and at least one other Republican member of Congress are reportedly *critical of President Donald Trump** for offering a dinner and White House tour to top holders of his memecoin. Senator Lummis expressed that the reward for memecoin holders "gives [her] pause". [link](https://www.eff.org/deeplinks/2025/04/congress-passes-take-it-down-act-despite-major-flaws) | [link](https://www.politico.com/newsletters/digital-future-daily/2025/04/29/a-tech-law-just-passed-could-it-happen-again-00316428) | [link](https://www.coindesk.com/business/2025/05/01/world-liberty-s-stablecoin-will-be-used-to-close-mgx-s-usd2b-binance-investment-eric-trump)
+- **OpenAI rolled back an update to ChatGPT** meant to improve the bot's personality. Instead, the company faced a swift backlash on social media among users complaining the popular AI app had become overly sycophantic, to the point of seeming disingenuous and manipulative. Ouch. ([Decrypt](https://decrypt.co/317055/openai-chatgpt-update-users-revolt-over-sycophantic-behavior))
 
+- **In the U.S. Senate, some unexpected twists regarding crypto:** Republicans Cynthia Lummis of Wyoming and Lisa Murkowski of Alaska [publicly criticized](https://www.cnbc.com/2025/05/02/senate-republicans-raise-red-flags-about-trumps-private-dinner-with-his-meme-coin-holders.html) Donald Trump's recent private dinner with large holders of his TRUMP memecoin. Meanwhile, on Democrats' side of the aisle, nine members [pulled their earlier support](https://cointelegraph.com/news/democrats-pull-support-gop-stablecoin-bill) for a pending stablecoin bill, jeopardizing the proposal's chance of passage in its current form. The situation also underscores how difficult it is on Capitol Hill these days to pass *any* legislation whatsoever regarding tech. Politco's Mohar Chatterjee [explored that broader trend](https://www.politico.com/newsletters/digital-future-daily/2025/04/29/a-tech-law-just-passed-could-it-happen-again-00316428) in painful detail Thursday.
 
-
-
-- The CoinTelegraph article titled "EU to ban anonymous crypto accounts and privacy coins by 2027" announces that the *European Union* is set to implement sweeping new Anti-Money Laundering (AML) regulations beginning in 2027. These rules will *ban privacy-preserving tokens and anonymous cryptocurrency accounts* as part of a broader AML framework targeting service providers and token anonymity.
-
-- The Decrypt article titled "OpenAI Rolls Back ChatGPT Update After User Pushback Over ‘Sycophantic’ Behavior" reports that *OpenAI reversed a recent ChatGPT update* due to user criticism that the AI had become "overly flattering or agreeable—often described as sycophantic". OpenAI stated they over-relied on short-term feedback and plans to introduce more user control over personality and tone in the future.
-
+- **A new study sparked fresh debate about AI ethics in the academy.** Researchers at the University of Zurich sparked outrage after secretly deploying AI bots on Reddit that pretended to be rape survivors, trauma counselors, and even a "Black man opposed to Black Lives Matter" — all to see if they could change people's minds on controversial topics. ([Decrypt](https://decrypt.co/316976/secret-reddit-experiment-using-ai-personas-sparks-ethics-scandal-in-academia))
 
 ### Looking Ahead
 
-- The excerpt from the Salon.com article titled "Morgan Stanley, Charles Schwab Corp. to offer crypto trading" primarily details *Trump Media & Technology's plans to offer Bitcoin ETFs* through its new financial services firm, Truth.Fi. It also mentions a reported $2 billion business deal involving digital coins from a Trump family crypto business and Eric Trump's opinion that the traditional banking system is "antiquated". Note: Information about Morgan Stanley or Charles Schwab offering crypto trading is not present in the provided excerpt. [link](https://www.salon.com/2025/05/02/morgan-stanley-charles-schwab-corp-to-offer-crypto-trading/?in_brief=true)
+- **Charles Schwab and Morgan Stanley** plan to add spot crypto trading for their U.S. retail customers, including users of Morgan's E*Trade platform. Such a move by the brokerage giants will greatly expand small investors' ability to trade tokens alongside stocks and other conventional assets. ([Salon](https://www.salon.com/2025/05/02/morgan-stanley-charles-schwab-corp-to-offer-crypto-trading/?in_brief=true))
 
-- The Decrypt article titled "Secret Reddit Experiment Using AI Personas Sparks Ethics Scandal in Academia" describes a covert experiment by University of Zurich researchers who used *AI bots posing as human personas on Reddit* to attempt to change users' opinions on controversial topics. Reddit moderators and legal counsel vehemently condemned the experiment as deeply wrong, unethical, and a violation of academic norms, human rights norms, and Reddit's rules due to the deception and lack of consent.
+- **The European Union is set to impose** sweeping anti-money laundering rules that will ban privacy-preserving tokens and anonymous cryptocurrency accounts beginning in 2027. ([Cointelegraph](https://cointelegraph.com/news/eu-crypto-ban-anonymous-privacy-tokens-2027))
 
 ### Odds & Ends
 
