Writethrough of lead item by me

--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -15,15 +15,17 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+**The idea that institutions should hold bitcoin** to diversify their cash reserves is still very much alive and well. But there do seem to be some distinctions lately depending on *which* sort of institution is in play.
 
-<!-- Riff on recent bitcoin headlines, mostly institutional adoption. Some notes... -->
+In the public sector,
+<!-- *Mixed news on institutional BTC treasuries:* The CoinDesk article titled "Arizona Governor Calls Crypto an ‘Untested Investment,’ Striking Bitcoin Reserve Bill" reports that *Arizona Governor Katie Hobbs vetoed a bill* (Senate Bill 1025) that would have permitted the state to hold Bitcoin as part of its official reserves using seized funds. The governor referred to crypto as an "untested investment".  -->
 
-*Mixed news on institutional BTC treasuries:* The CoinDesk article titled "Arizona Governor Calls Crypto an ‘Untested Investment,’ Striking Bitcoin Reserve Bill" reports that *Arizona Governor Katie Hobbs vetoed a bill* (Senate Bill 1025) that would have permitted the state to hold Bitcoin as part of its official reserves using seized funds. The governor referred to crypto as an "untested investment". | The Decrypt article titled "Brown University Bets on Bitcoin With Millions Worth of BlackRock ETF Shares" reports that *Brown University* has disclosed holding exposure to Bitcoin through its investment in *BlackRock's iShares Bitcoin Trust ETF (IBIT)*. As of March 31, the university held 105,000 shares, valued at nearly $5 million. | AdTech firm Thumzup Media Corporation is seeking to raise $200 million to bolster its bitcoin treasury, which currently holds around $1.8 million worth of bitcoin. This move is part of a growing trend of companies mirroring similar strategy-inspired plays, with Thumzup's market cap of around $48.5 million, as reported in a recent SEC filing, making it a notable example in the crypto space. ([The Block](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury)) | The Decrypt article titled "Public Keys: Strategy Doubles Down on Bitcoin Plans, Robinhood Glitters With Gold" covers public crypto companies, detailing Strategy's "42-42 Capital Plan" focusing on Bitcoin despite a recent quarterly loss. It also highlights *Robinhood Gold's success in generating net deposits* for the trading platform. [link](https://decrypt.co/316997/metas-latest-standalone-ai-app)
+In academia,
+<!-- The Decrypt article titled "Brown University Bets on Bitcoin With Millions Worth of BlackRock ETF Shares" reports that *Brown University* has disclosed holding exposure to Bitcoin through its investment in *BlackRock's iShares Bitcoin Trust ETF (IBIT)*. As of March 31, the university held 105,000 shares, valued at nearly $5 million. -->
 
-- The CryptoSlate article titled "Vitalik Buterin wants to make Ethereum ‘as simple as Bitcoin’ by 2030" discusses *Ethereum co-founder Vitalik Buterin's goal to significantly simplify Ethereum* by reducing its consensus-critical code to enhance resilience, aiming for it to become close to as simple as Bitcoin by 2030. His proposed path involves implementing a "beam chain" for faster finality and simpler concepts, reducing active validators, integrating STARK-based aggregation, and standardizing protocols across layers.
+Then there's the corporate world, TKTKTK
 
-- De-dollarization? <!-- Recent JPM remark on it being more plausible post-tariffs. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs)) -->
+<!-- |  | AdTech firm Thumzup Media Corporation is seeking to raise $200 million to bolster its bitcoin treasury, which currently holds around $1.8 million worth of bitcoin. This move is part of a growing trend of companies mirroring similar strategy-inspired plays, with Thumzup's market cap of around $48.5 million, as reported in a recent SEC filing, making it a notable example in the crypto space. ([The Block](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury)) | The Decrypt article titled "Public Keys: Strategy Doubles Down on Bitcoin Plans, Robinhood Glitters With Gold" covers public crypto companies, detailing Strategy's "42-42 Capital Plan" focusing on Bitcoin despite a recent quarterly loss. -->
 
 
  <hr>
