Updates to leade item by me

--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -15,18 +15,15 @@
 
 <hr>
 
-**The idea that institutions should hold bitcoin** to diversify their cash reserves is still very much alive and well. But there do seem to be some distinctions lately depending on *which* sort of institution is in play.
+**The idea that institutions should hold bitcoin** to diversify their balance sheets is still very much alive and well. But enthusiasm does seem to vary lately depending on which *sort* of institution is in play.
 
-In the public sector,
-<!-- *Mixed news on institutional BTC treasuries:* The CoinDesk article titled "Arizona Governor Calls Crypto an ‘Untested Investment,’ Striking Bitcoin Reserve Bill" reports that *Arizona Governor Katie Hobbs vetoed a bill* (Senate Bill 1025) that would have permitted the state to hold Bitcoin as part of its official reserves using seized funds. The governor referred to crypto as an "untested investment".  -->
+On Friday, Arizona's governor [vetoed a bill](https://www.coindesk.com/policy/2025/05/03/arizona-governor-calls-crypto-an-untested-investment-vetoes-bitcoin-reserve-bill) that would have made it the first U.S. state to create a public bitcoin reserve. Gov. Katie Hobbs, a Democrat, called bitcoin an "untested investment" as Arizona joined a list that includes five other states where proposals to create a bitcoin reserve have recently [fallen flat](https://decrypt.co/308009/u-s-state-bitcoin-reserve-plans-hit-roadblock-as-multiple-bills-rejected).
 
-In academia,
-<!-- The Decrypt article titled "Brown University Bets on Bitcoin With Millions Worth of BlackRock ETF Shares" reports that *Brown University* has disclosed holding exposure to Bitcoin through its investment in *BlackRock's iShares Bitcoin Trust ETF (IBIT)*. As of March 31, the university held 105,000 shares, valued at nearly $5 million. -->
+In academia, however, there was a glimmer of hope for bitcoin bulls: The Ivy League's Brown University disclosed in regulatory filings that it now has [nearly $5 million in bitcoin exposure](https://decrypt.co/317714/brown-university-bitcoin-blackrock-etf) via BlackRock’s iShares Bitcoin Trust, an exchange-traded fund that holds tokens on investors' behalf.
 
-Then there's the corporate world, TKTKTK
+Then there's the corporate world, where the practice of ["stacking sats"](https://bitcoinmagazine.com/business/stacking-sats-how-small-weekly-investments-can-offer-decent-returns) has established the widest adoption in recent years. The listed consulting company Strategy, already one one of the biggest bitcoin holders in the world, [just bought](https://cointelegraph.com/news/michael-saylor-signals-bitcoin-purchase-following-earnings-call) an additional $1.4 million in tokens.
 
-<!-- |  | AdTech firm Thumzup Media Corporation is seeking to raise $200 million to bolster its bitcoin treasury, which currently holds around $1.8 million worth of bitcoin. This move is part of a growing trend of companies mirroring similar strategy-inspired plays, with Thumzup's market cap of around $48.5 million, as reported in a recent SEC filing, making it a notable example in the crypto space. ([The Block](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury)) | The Decrypt article titled "Public Keys: Strategy Doubles Down on Bitcoin Plans, Robinhood Glitters With Gold" covers public crypto companies, detailing Strategy's "42-42 Capital Plan" focusing on Bitcoin despite a recent quarterly loss. -->
-
+Separately, the advertising technology startup Thumzup Media is seeking to [raise $200 million](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury) to bolster its bitcoin treasury. It currently holds around $1.8 million worth of the token.
 
  <hr>
 
