Adding hed + subhead by ChatGPT, with light edits by me

--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -1,62 +1,5 @@
-<!--
-
-Getting help with headline drafting using the following prompt to Copilot and ChatGPT:
-
-Could you please draft five possible headlines and five possible subheads for the lead item in the attached newsletter draft?
-
-
-# Copilot response
-
-### Headlines:
-1. "Institutions Continue to Debate Bitcoin's Role on Their Balance Sheets"
-2. "Bitcoin's Institutional Adoption: A Mixed Bag of Hope and Hesitation"
-3. "From Universities to Corporations: How Institutions Are Engaging with Bitcoin"
-4. "Arizona's Crypto Bill Veto Highlights Diverging Views on Institutional Bitcoin Adoption"
-5. "Bitcoin Bulls See Glimmers of Hope Amid Institutional Uncertainties"
-
-### Subheads:
-1. "Academic institutions like Brown University embrace Bitcoin exposure, while others remain cautious."
-2. "Arizona governor's veto casts doubt on state-level crypto adoption initiatives."
-3. "Corporate and academic sectors show contrasting enthusiasm for Bitcoin as a reserve asset."
-4. "Brown University takes the leap with $5M in Bitcoin, signaling growing trust in crypto."
-5. "The debate over Bitcoin's institutional role intensifies as governments and businesses weigh risks."
-
-
-
-# ChatGPT response
-
-Thanks for sharing the draft. Based on your lead item about institutional bitcoin adoption — with contrasting moves from U.S. states, academia, and corporations — here are **five possible headlines** and **five possible subheads** that could work for the top story:
-
----
-
-### **Headline Options**
-
-1. **Bitcoin on the Books? Depends Who’s Counting**
-2. **Statehouse Skeptics, Ivy League Bulls, and Corporate Stackers**
-3. **Institutions Still Divided on Bitcoin as a Treasury Asset**
-4. **Bitcoin Reserve Proposals Stumble — But Strategy and Brown Buy In**
-5. **Governors Say No, But Wall Street and Academia Say Yes to Bitcoin**
-
----
-
-### **Subhead Options**
-
-1. **Arizona vetoes a public bitcoin reserve — even as Brown University and major firms increase exposure.**
-2. **The institutional case for bitcoin remains alive — but support varies widely by sector.**
-3. **One state backs away from BTC, while a university endowment and consulting giant double down.**
-4. **Strategy keeps stacking sats; Brown University discloses ETF holdings; Arizona hits pause.**
-5. **From vetoed legislation to corporate accumulation, bitcoin’s path to mainstream finance is anything but linear.**
-
----
-
-Would you like me to tailor these toward a more formal or more playful tone?
-
-
--->
-
-
-# tktk
-## tktk
+# Bitcoin on the books? Depends who’s counting.
+## U.S. states are saying no. But Wall Street and an Ivy League university are warming to it as a diversifier.
 
 ![Photo of a trader holding a physical BTC token in front of a screen with charts on it](https://w3w.news/img/bitcoin-art-rachen-unsplash-1920.jpg)
 
