--- a/2025/2025-05-04-wir.md
+++ b/2025/2025-05-04-wir.md
@@ -21,9 +21,9 @@ On Friday, Arizona's governor [vetoed a bill](https://www.coindesk.com/policy/20
 
 In academia, however, there was a glimmer of hope for bitcoin bulls: The Ivy League's Brown University disclosed in regulatory filings that it now has [nearly $5 million in bitcoin exposure](https://decrypt.co/317714/brown-university-bitcoin-blackrock-etf) via BlackRock’s iShares Bitcoin Trust, an exchange-traded fund that holds tokens on investors' behalf.
 
-Then there's the corporate world, where the practice of ["stacking sats"](https://bitcoinmagazine.com/business/stacking-sats-how-small-weekly-investments-can-offer-decent-returns) has established the widest adoption in recent years. The listed consulting company Strategy, already one one of the biggest bitcoin holders in the world, [just bought](https://cointelegraph.com/news/michael-saylor-signals-bitcoin-purchase-following-earnings-call) an additional $1.4 million in tokens.
+Then there's the corporate world, where the practice of ["stacking sats"](https://bitcoinmagazine.com/business/stacking-sats-how-small-weekly-investments-can-offer-decent-returns) has established its biggest foothold in recent years. The listed consulting company Strategy, already one one of the biggest bitcoin holders in the world, [bought](https://cointelegraph.com/news/michael-saylor-signals-bitcoin-purchase-following-earnings-call) an additional $1.4 billion in tokens early last week.
 
-Separately, the advertising technology startup Thumzup Media is seeking to [raise $200 million](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury) to bolster its bitcoin treasury. It currently holds around $1.8 million worth of the token.
+Separately, the advertising technology startup Thumzup Media is [raising $200 million](https://www.theblock.co/post/353043/adtech-firm-thumzup-seeks-200-million-to-100x-size-of-bitcoin-treasury) to bolster its bitcoin treasury, currently valued around $1.8 million. The company's shares have jumped nearly 50% so far this year, the period during which it has been acquiring bitcoin.
 
  <hr>
 
