Adding some links w very rough summaries by me, except where noted in comments..

--- a/2025/2025-05-11-wir.md
+++ b/2025/2025-05-11-wir.md
@@ -10,7 +10,7 @@
 
 - _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. To join them in supporting this work, check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
-- _**I'm also happy today** to introduce a new affiliate: Roobinium's Kate Zimina! She's that rare award-winning designer who understands web3, with experience creating [beautiful interfaces](https://dribbble.com/roobinium) for NFT apps, crypto wallets, and more. To get her help with your project, contact Kate via email digitaldesigner2047@gmail.com or via Telegram @digitaldesigner2047. When you hire Kate, a portion of your order will go toward supporting w3w. So everyone wins._ 😊
+- _**This week I'm also happy to highlight** our affiliate Kate Zimina of Roobinium. She's that rare award-winning designer who understands web3, with experience creating [beautiful interfaces](https://dribbble.com/roobinium) for NFT apps, crypto wallets, and more. To get her help with your project, contact Kate via email digitaldesigner2047@gmail.com or via Telegram @digitaldesigner2047. When you hire Kate, a portion of your order will go toward supporting w3w. So everyone wins._ 😊
 
 <hr>
 
@@ -31,28 +31,23 @@
 
 ### Five Things: April 27 to May 3, 2025
 
-*The week's top headlines about blockchain, AI, and other emerging technologies and trends re-shaping the web:*
+*The week's top headlines emerging technologies and trends reshaping the web:*
 
-- U.S. bank regulations on crypto relaxed. <!-- Link TK -->
+- eToro IPO ([Reuters](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05/))
 
-- 21Shares updates <!-- Link TK -->
+- The digital news outlet El Faro says El Salvador's Bukele is preparing to arrest several of its journalsits. https://www.msn.com/en-xl/news/other/trump-ally-reportedly-set-to-arrest-journalists-who-revealed-his-secret-pact-with-gangs/ar-AA1EdWNJ | https://elfaro.net/en/202515/el_salvador/27826/El-Faro-Denounces-Possible-Arrest-Warrants-for-At-Least-Seven-Staff-Members-in-El-Salvador.htm <!-- Update later in the week. -->
 
-- TKTK
+- Why Are All the Billionaires Around Trump Such Losers? ([Slate](https://slate.com/news-and-politics/2025/05/jeff-bezos-elon-musk-mark-zuckerberg-donald-trump-billionaire-losers-maga.html))
 
-- TKTK
+- Microsoft shut down Skype. ([PCMag](https://www.pcmag.com/news/microsoft-is-shutting-down-skype-shifting-users-to-teams?utm_country_code=US))
 
-- De-dollarization? <!-- Recent JPM remark on it being more plausible post-tariffs. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs)) -->
+- a16z explainer re: tokenomics -- https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn
+
+- Bitcoin-Cardano transfer completed with no bridge, just zero-knowledge proofs. ([Decrypt](https://decrypt.co/317840/bitcoinos-demo-sends-btc-to-cardano-and-back-without-a-cross-chain-bridge))
 
 ### Looking Ahead
 
-- TKTK
-
-- TKTK
-
-- The CryptoSlate article titled "Vitalik Buterin wants to make Ethereum ‘as simple as Bitcoin’ by 2030" discusses *Ethereum co-founder Vitalik Buterin's goal to significantly simplify Ethereum* by reducing its consensus-critical code to enhance resilience, aiming for it to become close to as simple as Bitcoin by 2030. His proposed path involves implementing a "beam chain" for faster finality and simpler concepts, reducing active validators, integrating STARK-based aggregation, and standardizing protocols across layers.
-
-- De-dollarization? <!-- Recent JPM remark on it being more plausible post-tariffs. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs)) -->
-
+- **Vitalik Buterin wants to make Ethereum "as simple as Bitcoin" by 2030.** His proposed path involves implementing a "beam chain" for faster finality and simpler concepts, reducing active validators, integrating STARK-based aggregation, and standardizing protocols across layers. ([CryptoSlate](https://cryptoslate.com/vitalik-buterin-wants-to-make-ethereum-as-simple-as-bitcoin-by-2030/)) <!-- Drafted by NotebookLM -->
 
 - TKTK <!-- Add a CTA either at the beginning or end of this section. Here's language from last week: I'm adding a new section this week to cover specific tech events and developments coming up. If you have conferences, award competitions, or similar time-sensitive stuff in the works, this is a place I'd like to share such info in future updates. Please email me the details at peter[at]w3w[dot]media. 📬 -->
 
