--- a/2025/2025-05-11-wir.md
+++ b/2025/2025-05-11-wir.md
@@ -33,29 +33,40 @@
 
 *The week's top headlines emerging technologies and trends reshaping the web:*
 
-- eToro IPO ([Reuters](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05/))
+- Ethereum's Pecta upgrade went live: https://www.coindesk.com/tech/2025/05/07/ethereum-activates-pectra-upgrade-raising-max-stake-to-2048-eth | Bitcoin-Cardano transfer completed with no bridge, just zero-knowledge proofs. ([Decrypt](https://decrypt.co/317840/bitcoinos-demo-sends-btc-to-cardano-and-back-without-a-cross-chain-bridge))
 
 - The digital news outlet El Faro says El Salvador's Bukele is preparing to arrest several of its journalsits. https://www.msn.com/en-xl/news/other/trump-ally-reportedly-set-to-arrest-journalists-who-revealed-his-secret-pact-with-gangs/ar-AA1EdWNJ | https://elfaro.net/en/202515/el_salvador/27826/El-Faro-Denounces-Possible-Arrest-Warrants-for-At-Least-Seven-Staff-Members-in-El-Salvador.htm <!-- Update later in the week. -->
+
+- OpenAI updates: https://www.wsj.com/tech/ai/openai-to-become-public-benefit-corporation-9e7896e0?st=QVaRQ6&reflink=desktopwebshare_permalink | https://www.reuters.com/business/elon-musk-keep-lawsuit-against-openai-despite-nonprofit-control-statement-lawyer-2025-05-06/ | https://www.axios.com/2025/05/07/openai-democratic-ai-expansion | https://finance.yahoo.com/news/microsoft-key-holdout-openai-restructuring-234551638.html | https://www.reuters.com/business/openai-agrees-buy-windsurf-about-3-billion-bloomberg-news-reports-2025-05-06/
+
+- Crypto bill losing support in Senate: https://www.politico.com/live-updates/2025/05/05/congress/crypto-stablecoin-senate-gallego-warren-trump-00326235 | https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html | https://www.axios.com/2025/05/07/trump-crypto-stablecoin-bill
+
+- eToro IPO ([Reuters](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05/))
 
 - Why Are All the Billionaires Around Trump Such Losers? ([Slate](https://slate.com/news-and-politics/2025/05/jeff-bezos-elon-musk-mark-zuckerberg-donald-trump-billionaire-losers-maga.html))
 
 - Microsoft shut down Skype. ([PCMag](https://www.pcmag.com/news/microsoft-is-shutting-down-skype-shifting-users-to-teams?utm_country_code=US))
 
-- a16z explainer re: tokenomics -- https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn
-
-- Bitcoin-Cardano transfer completed with no bridge, just zero-knowledge proofs. ([Decrypt](https://decrypt.co/317840/bitcoinos-demo-sends-btc-to-cardano-and-back-without-a-cross-chain-bridge))
-
-### Looking Ahead
-
 - **Vitalik Buterin wants to make Ethereum "as simple as Bitcoin" by 2030.** His proposed path involves implementing a "beam chain" for faster finality and simpler concepts, reducing active validators, integrating STARK-based aggregation, and standardizing protocols across layers. ([CryptoSlate](https://cryptoslate.com/vitalik-buterin-wants-to-make-ethereum-as-simple-as-bitcoin-by-2030/)) <!-- Drafted by NotebookLM -->
 
-- TKTK <!-- Add a CTA either at the beginning or end of this section. Here's language from last week: I'm adding a new section this week to cover specific tech events and developments coming up. If you have conferences, award competitions, or similar time-sensitive stuff in the works, this is a place I'd like to share such info in future updates. Please email me the details at peter[at]w3w[dot]media. 📬 -->
+- a16z explainer re: tokenomics -- https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn
 
+- The dollar isn't worth its weight in gold. https://www.cabotwealth.com/daily/precious-metals-investing/dollar-isnt-worth-its-weight-in-gold
 
-### Odds & Ends
+- NYT beat on earnings. <!-- Link TK -->
 
 - **Being polite to ChatGPT is pointless.** <!-- Earlier summary drafted by NotebookLM --> The Decrypt article titled "Being Polite to ChatGPT is Pointless New Research Shows" discusses a new study by George Washington University researchers indicating that using polite words like "please" and "thank you" has a *negligible effect on AI response quality* for models like ChatGPT, contrary to earlier findings. The research suggests that the "Jekyll-and-Hyde tipping point" where AI outputs degrade depends on training and substantive prompt words, not courtesy, and relates to the model spreading its attention too thinly over longer responses. ([Decrypt](https://decrypt.co/317176/polite-chatgpt-pointless-new-research))
 
-- TKTK
+### Looking Ahead
 
-_**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊 <!-- Add link to "about" copy when it's ready. -->
+- TKTK <!-- Add a CTA either at the beginning or end of this section. Here's language from last week: I'm adding a new section this week to cover specific tech events and developments coming up. If you have conferences, award competitions, or similar time-sensitive stuff in the works, this is a place I'd like to share such info in future updates. Please email me the details at peter[at]w3w[dot]media. 📬 -->
+
+### Odds & Ends
+
+- TK
+
+_**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available here [here](https://w3wnews.substack.com/about).**_ 
+
+_**If you need to reach me directly for any reason, email peter[at]w3w[dot]media.**_
+
+_**Best wishes for a healthy and productive week ahead.**_ 😊
